--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "supervisor app.js",
+    "dev": "node app.js",
+    "build": "pm2 start app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
